--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -23,6 +23,15 @@ dependencies {
 
 	implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.6.1'
 	
+
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	
+	testCompileOnly 'org.projectlombok:lombok:1.18.22'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+	
+    implementation('com.github.javafaker:javafaker:1.0.2')
+
 }
 
 test {
